--- a/src/Components/Activities/Activities.css
+++ b/src/Components/Activities/Activities.css
@@ -1,17 +1,15 @@
-body{
-    background-color: rgb(241, 240, 240);
-}
+
+
 .activites{
-    /* margin-top: 25px; */
     display: grid;
     grid-template-columns: 4fr 1fr;
-    
+    background-color: rgb(241, 240, 240)
 }
 .activity-container{
     width: 80%;
     margin: auto;
-    
-
+    margin-top: 25px;
+     margin-top: 25px;
 }
 .activity{
     display: grid;
@@ -19,5 +17,15 @@ body{
     gap: 25px;
 }
 .activity-details{
+    margin: 0;
+    padding: 0;
+    padding-left: 20px;
     background-color: #FFFFFF;
+}
+.activity-details h2{
+    margin-top: 0;
+    padding-top: 0;
+}
+.person-details{
+   
 }
