--- a/src/Components/Activities/Activities.css
+++ b/src/Components/Activities/Activities.css
@@ -47,7 +47,7 @@
     margin: auto;
     background: lightgray;
     padding: 10px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 .btn-break button{
     padding: 20px 20px 20px 20px;
@@ -57,7 +57,20 @@
     border-radius: 50px;
 
 }
-
+.ex-time{
+    background: lightgray;
+    padding: 5px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+.completed-activity{
+    width: 100%;
+    background: rgb(140, 140, 236);
+    text-align: center;
+    border: 0px;
+    border-radius: 10px;
+}
 @media screen and (max-width:786px){
 
     }
