--- a/src/Components/Activities/Activities.css
+++ b/src/Components/Activities/Activities.css
@@ -72,7 +72,17 @@
     border-radius: 10px;
 }
 @media screen and (max-width:786px){
-
+    .activites{
+        display: block;
+        /* grid-template-columns: 3fr 1fr;
+        background-color: rgb(241, 240, 240) */
+    }
+    .activity{
+        display: grid;
+        grid-template-columns: 1fr;
+        /* gap: 15px; */
+        /* width: 100%; */
+    }
     }
     
     
