--- a/src/Components/Activity/Activity.css
+++ b/src/Components/Activity/Activity.css
@@ -18,3 +18,14 @@
     border: 0px;
     border-radius: 10px;
 }
+
+@media screen and (max-width:786px){
+    .activity-cart{
+        /* width: 100%; */
+        /* height: 435px; */
+        /* background-color: #FFFFFF;
+        padding-left: 10px ;
+        padding-top: 7px;
+        border-radius: 5px; */
+    }
+    }
